--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bs58 = "0.4.0"    # encode, decode
+ring = "0.16.20"  # sha256
+bincode = "1.3.3" # serialize, deserialize
+serde = { version = "1.0.132", features = ["derive"] }
