--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bs58 = "0.4.0"    # encode, decode
 ring = "0.16.20"  # sha256
+rust-crypto = "0.2.36" # ripemd160
 bincode = "1.3.3" # serialize, deserialize
 num-bigint = "0.4.0" # bigint, It supports big integers
 data-encoding = "2.3.0" # HEXLOWER
